Stub out Caliptra implementation of DPE Crypto trait

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -57,6 +57,18 @@ jobs:
             core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
             core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
 
+      - name: Set Rust ${{ env.RUST_TOOLCHAIN_VERSION }} as the default toolchain.
+        run: |
+          rustup default ${RUST_TOOLCHAIN_VERSION}
+          rustup component add rustfmt clippy
+          rustc --version
+          cargo fmt --version
+          cargo clippy --version
+
+      - name: Initialize submodules
+        run: |
+          git submodule update --init runtime/dpe
+
       - name: Check that Cargo.lock doesn't need to be updated
           # Note: this isn't the same as checking that Cargo.lock is up to date
           # (cargo update --locked), which makes sure that every package is the
