--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,9 @@ members = [
   "registers",
   "registers/bin/generator",
   "runtime",
+  "runtime/dpe/crypto",
+  "runtime/dpe/dpe",
+  "runtime/dpe/simulator",
   "runtime/test-fw",
   "sw-emulator/app",
   "sw-emulator/compliance-test",
