--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,6 +73,7 @@ members = [
 aes = "0.8.2"
 anyhow = "1.0.70"
 arrayref = "0.3.6"
+arrayvec = { version = "0.7.4", default-features = false }
 asn1 = "0.13.0"
 bitfield = "0.14.0"
 bitflags = "2.0.1"
